create a endpoint to make a booking
