# src/routes/bookings.routes.ts
@@ -1,8 +1,9 @@
 import express from "express";
 const router = express.Router();
-import { getBookingsById } from "../controllers/bookings.controllers";
+import { getBookingsById, makeBookings } from "../controllers/bookings.controllers";
 import { isAuthenticated } from "../middlewares/verifyToken.middleware";
 
 router.get('/:id', isAuthenticated, getBookingsById);
+router.post('/', isAuthenticated, makeBookings);
 
 export default router;
